--- a/src/app/admin/folders/folders.component.html
+++ b/src/app/admin/folders/folders.component.html
@@ -38,13 +38,13 @@
             <input [(ngModel)]="folder.name">
           </td>
           <td>
-            <select [(ngModel)]="folder.library">
-              <option *ngFor="let library of libraries">{{library.name}}</option>
+            <select [(ngModel)]="folder.library.name">
+              <option *ngFor="let library of libraries" [ngValue]="library.name">{{library.name}}</option>
             </select>
           </td>
           <td>
             <select [(ngModel)]="folder.description">
-              <option *ngFor="let description of descriptions">{{description.description}}</option>
+              <option *ngFor="let description of descriptions" [ngValue]="description.description">{{description.description}}</option>
             </select>
           </td>
           <td>
