--- a/src/app/admin/libraries/libraries.component.html
+++ b/src/app/admin/libraries/libraries.component.html
@@ -39,14 +39,14 @@
             <input [(ngModel)]="library.name">
           </td>
           <td>
-            <select [(ngModel)]="library.description">
-              <option *ngFor="let description of descriptions" [ngValue]="description">{{description.description}}
+            <select [(ngModel)]="library.description.description">
+              <option *ngFor="let description of descriptions" [ngValue]="description.description">{{description.description}}
               </option>
             </select>
           </td>
           <td>
-            <select [(ngModel)]="library.interest">
-              <option *ngFor="let interest of interests" [ngValue]="interest">{{interest.interest}}</option>
+            <select [(ngModel)]="library.interest.interest">
+              <option *ngFor="let interest of interests" [ngValue]="interest.interest">{{interest.interest}}</option>
             </select>
           </td>
           <td>
