modified descriptions components and dto classes

--- a/src/app/admin/libraries/libraries.component.html
+++ b/src/app/admin/libraries/libraries.component.html
@@ -40,8 +40,7 @@
           </td>
           <td>
             <select [(ngModel)]="library.description.description">
-              <option *ngFor="let description of descriptions" [ngValue]="description.description">{{description.description}}
-              </option>
+              <option *ngFor="let description of descriptions" [ngValue]="description.description">{{description.description}}</option>
             </select>
           </td>
           <td>
