--- a/src/app/admin/tags/tags.component.html
+++ b/src/app/admin/tags/tags.component.html
@@ -34,8 +34,7 @@
           </td>
           <td>
             <select [(ngModel)]="tag.description.description">
-              <option *ngFor="let description of descriptions" [ngValue]="description.description">{{description.description}}
-              </option>
+              <option *ngFor="let description of descriptions" [ngValue]="description.description">{{description.description}}</option>
             </select>
           </td>
           <td>
