--- a/src/app/admin/searchconnections/searchconnections.component.html
+++ b/src/app/admin/searchconnections/searchconnections.component.html
@@ -32,13 +32,13 @@
         </tr>
         <tr *ngFor="let searchconnection of searchconnections">
           <td>
-            <select [(ngModel)]="searchconnection.tag.tag">
-              <option *ngFor="let tag of tags" [ngValue]="tag.tag">{{tag.tag}}</option>
+            <select [(ngModel)]="searchconnection.tag.id">
+              <option *ngFor="let tag of tags" [ngValue]="tag.id">{{tag.tag}}</option>
             </select>
           </td>
           <td>
-            <select [(ngModel)]="searchconnection.document.text">
-              <option *ngFor="let document of documents" [ngValue]="document.text">{{document.text}}</option>
+            <select [(ngModel)]="searchconnection.document.id">
+              <option *ngFor="let document of documents" [ngValue]="document.id">{{document.text}}</option>
             </select>
           </td>
           <td>
