--- a/Project1WPF/MainWindow.xaml
+++ b/Project1WPF/MainWindow.xaml
@@ -14,6 +14,6 @@
 
         <TextBlock Text="Elenco utenti" FontSize="16" FontWeight="Bold"></TextBlock>
 
-        <DataGrid Margin="15" Grid.Row="1" ItemsSource="{Binding Users, Mode=OneWay}" IsReadOnly="True"></DataGrid>
+        <DataGrid Margin="15" Grid.Row="1" ItemsSource="{Binding Users, Mode=OneWay}"></DataGrid>
     </Grid>
 </local:BaseForm>
